--- a/src/Mkox/SolmikBundle/Resources/public/partials/categoryEdit.html
+++ b/src/Mkox/SolmikBundle/Resources/public/partials/categoryEdit.html
@@ -3,11 +3,11 @@
     <div id="solmik_category">
         <div>                
             <label for="solmik_category_name" class="required">Name</label>
-            <input type="text" ng-model="vm.category.name" id="solmik_category_name" name="solmik_category[name]" required="required" value="0 actual" />
+            <input type="text" ng-model="category.name" id="solmik_category_name" name="solmik_category[name]" required="required" value="0 actual" />
         </div>
         <div>                
             <label for="solmik_category_public">Public</label>
-            <input type="checkbox" ng-model="vm.category.public" id="solmik_category_public" name="solmik_category[public]" value="1" checked="checked" />
+            <input type="checkbox" ng-model="category.public" id="solmik_category_public" name="solmik_category[public]" value="1" checked="checked" />
         </div>
         <div>
             <button type="submit" id="solmik_category_save" name="solmik_category[save]">Save</button>
