restructured form for edit solmization string (angularJS)

--- a/src/Mkox/SolmikBundle/Resources/public/partials/stringEdit.html
+++ b/src/Mkox/SolmikBundle/Resources/public/partials/stringEdit.html
@@ -17,7 +17,7 @@
             <label for="solmik_solmistring_baseScale" class="required">Base scale
             </label>
             <input ng-model="vm.string.baseScale" type="number" min="1" max="9" required
-                   id="solmik_solmistring_for_list_baseScale" name="solmik_solmistring_for_list[baseScale]" class="scales" value="4"
+                   id="solmik_solmistring_for_list_baseScale" name="solmik_solmistring_for_list[baseScale]" class="scales"
                    >
         </div>
         <div>                
