--- a/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
+++ b/src/Mkox/SolmikBundle/Resources/views/Solmik/index.html.twig
@@ -107,8 +107,7 @@
                     <div class="step" ng-switch-when="edit">
                         <div ng-include="vm.path.categoryEdit"></div>
                     </div>
-                    <div class="step" ng-switch-when="delete">
-                        <div ng-include="vm.path.categoryDelete"></div>
+                    <div class="step" ng-switch-when="delete" form-delete-category ng-attr-category="category" ng-attr-vm="vm">
                     </div>
                     <div class="step" ng-switch-when="stringNew" form-new-string ng-attr-category="category" ng-attr-vm="vm">
                         {#<div ng-include="vm.path.stringNew"></div>#}
@@ -160,7 +159,7 @@
                         <div class="step" ng-switch-when="edit" form-edit-string ng-attr-category="category" ng-attr-solmistring="solmistring" ng-attr-vm="vm">
                             {#<div ng-include="vm.path.categoryEdit"></div>#}
                         </div>
-                        <div class="step" ng-switch-when="delete" ng-attr-category="category" ng-attr-solmistring="solmistring" form-delete-string ng-attr-vm="vm">
+                        <div class="step" ng-switch-when="delete" form-delete-string ng-attr-category="category" ng-attr-solmistring="solmistring" ng-attr-vm="vm">
                         </div>
                         <div class="step" ng-switch-default>
 
