corrected error: stored "public" value of a category was always 1 through angularJS forms

--- a/src/Mkox/SolmikBundle/Resources/public/partials/categoryNew.html
+++ b/src/Mkox/SolmikBundle/Resources/public/partials/categoryNew.html
@@ -6,7 +6,7 @@
         </div>
         <div>                
             <label for="solmik_category_public">Public</label>
-            <input type="checkbox" id="solmik_category_public" ng-model="vm.solmikCategory.public" name="solmik_category[public]" value="1" />
+            <input type="checkbox" id="solmik_category_public" ng-model="vm.solmikCategory.public" name="solmik_category[public]"/>
         </div>
         <div>
             <button type="button" id="solmik_category_save" ng-model="vm.solmikCategory.save" ng-click="vm.saveCategoryNew()" name="solmik_category[save]">Save</button>
