--- a/src/Mkox/SolmikBundle/Resources/views/layout.html.twig
+++ b/src/Mkox/SolmikBundle/Resources/views/layout.html.twig
@@ -20,7 +20,7 @@
             </main>
         </div>
 {% block javascripts %}
-    <script src="{{ asset(bPath ~ 'js/libs/require/require-2.1.15.js') }}" type="text/javascript" data-main="{{ asset(bPath ~ 'dist/js/solmi') }}"></script>
+    <script src="{{ asset(bPath ~ 'js/libs/require/require-2.1.15.js') }}" type="text/javascript" data-main="{{ asset(bPath ~ 'js/solmi') }}"></script>
 {% endblock %}
 </body>
 </html>
